@@ -1,6 +1,6 @@
 MEDIA_TYPE = netboot image
 
-TARGET = $(INITRD) $(KERNEL)
+TARGET = $(INITRD) $(KERNEL) $(BOOT)
 EXTRANAME = $(MEDIUM)/
 
 # FIXME: Temporary fix, these files should be in a udeb!
@@ -8,4 +8,9 @@ EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
 
 MANIFEST-INITRD = "netboot initrd"
 MANIFEST-KERNEL = "kernel image to netboot"
+MANIFEST-BOOT = "tftp boot image for netwinder"
 
+.PHONY: arch_boot
+arch_boot:
+	gzip -c $(TEMP)/System.map-$(KERNELIMAGEVERSION) >$(TEMP)/System.map.gz
+	tftpboot.sh $(TEMP_KERNEL) $(TEMP)/System.map.gz $(TEMP_INITRD) $(TEMP_BOOT)
